--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "cross-env NODE_ENV=production node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js",
     "test": "cross-env NODE_ENV=test jest --verbose --runInBand",
-    "build:ui": "shx rm -rf dist && cd ../frontend/ && npm run build && shx cp -r dist ../backend",
+    "build:ui": "shx rm -rf dist && cd ../client/ && npm run build && shx cp -r dist ../server",
     "deploy": "fly deploy",
     "lint": "eslint .",
     "build:dev": "shx rm -rf dist && cd ../frontend/ && npm run build && shx cp -r dist ../backend && nodemon index.js"
